# hystron

./: .dockerignore  .gitignore  DOCS.md  Dockerfile  Dockerfile.node  README.md  docker-compose.node.yml  docker-compose.yml  flake.nix  hystron.code-workspace  install.sh  main.py  pyproject.toml  start.sh
.github/: changelog_configuration.json
.github/workflows/: release.yml
app/: database.py  events.py  main.py  models.py  node_client.py  node_sync.py  polling.py
app/db/: __init__.py  database.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py  0002_host_types.py  0002_xray_hosts.py  0003_host_id_pk.py  0003_per_protocol_passwords.py  0004_host_up_down.py  0005_user_sub_url.py
app/node/: client.py  sync.py
app/routes/: auth.py  sub.py
app/routes/api/: config.py  hosts.py  traffic.py  users.py
app/routes/internal/: config.py  hosts.py  tags.py  traffic.py  users.py
app/routes/node/: auth.py  sync.py  traffic.py
app/routes/public/: auth.py  sub.py
app/subscription/: __init__.py  base.py  builders.py  clash.py  plain.py  singbox.py  utils.py  xray.py
app/utils/: sub.py
app/ws/: router.py
app/xray/: client.py  node_info.py  sync.py
app/xray/proto/: xray_api.proto  xray_api_pb2.py  xray_api_pb2_grpc.py
cli/: __main__.py  main.py
docker/node/: entrypoint.sh
node/: __main__.py  agent.py  config.py  models.py  stats.py  xray.py
templates/: clash.yaml  index.html  xray.json
tui/: __init__.py  __main__.py  admin.py
